# Visca

./: .gitignore  meson.build
android/: build.gradle  local.properties  settings.gradle
android/example/: build.gradle
android/example/src/main/: AndroidManifest.xml
android/example/src/main/java/studio/stream/viscademo/: MainActivity.kt
android/example/src/main/res/layout/: activity_studio_main.xml
android/example/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/lib/: AndroidManifest.xml  build.gradle
android/lib/java/studio/stream/: Visca.java
android/lib/jni/: Android.mk  Application.mk  ViscaAndroid.cpp
examples/: control.cpp  meson.build
src/: Visca.cpp  Visca.hpp  meson.build
src/exceptions/: ViscaNetworkException.cpp  ViscaNetworkException.hpp  ViscaValueException.cpp  ViscaValueException.hpp
